--- a/public/example.html
+++ b/public/example.html
@@ -1,8 +1,18 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
 <script>
-    var socket = io('http://localhost:3000');
+    var socket = io('https://cbkm-analytics-services.herokuapp.com');
+    // var socket = io("http://localhost:3000/analytics");
     function wow() {
-        socket.emit('my other event', { my: 'cbkm' });
+        data={
+            appID:"Grab_IT15665642939041",
+            action:"myaction",
+            myname:"myname"
+        }
+        socket.emit('save', data);
         window.location.href = "index.html"
     }
 </script>
+
+<button onclick="wow()">
+    click
+</button>
